--- a/index.html
+++ b/index.html
@@ -66,11 +66,6 @@
 <include login-with-section-12/login.php>
 -->
 
-<nav class="myDiv">
-  <a href="login_system_with_database_with_out_check/login.php" >Log in</a>
-  <a href="login_system_with_database_with_out_check/login.php" >Sign up</a>
-</nav>
-
   
 
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -141,7 +136,7 @@
 <marquee vspace="0">
 <font size="2" color="#ff0000">
 <h2>
-Welcome to "www.likeit.co.in" <a href="payment.html">
+Welcome to "http://nikhilbharat.co" <a href="payment.html">
             
 <style>
 h1 {
