--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>developed by Jayanta Halder</title>
+  <title>nikhilbharat</title>
   <h1>Nikhil Bharat Bangali Samanwya Samiti</h1>
 
 
